@@ -97,6 +97,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13642: Unquote before b64encoding user:password during Basic
+  Authentication. Patch contributed by Joonas Kuorilehto.
+
 - Issue #13726: Fix the ambiguous -S flag in regrtest. It is -o/--slow for slow
   tests.
 
